[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/time.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/select_mode.gd" type="Script" id=2]
[ext_resource path="res://assets/wooden-sign.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[node name="select_mode" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 164.816
margin_top = 31.9541
margin_right = 408.816
margin_bottom = 571.954
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="test_button" type="TextureButton" parent="VBoxContainer"]
margin_right = 244.0
margin_bottom = 170.0
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/test_button"]
margin_left = 70.0
margin_top = 66.0
margin_right = 174.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 1 )
text = "test"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="story_button" type="TextureButton" parent="VBoxContainer"]
margin_top = 185.0
margin_right = 244.0
margin_bottom = 355.0
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/story_button"]
margin_left = 56.0
margin_top = 66.0
margin_right = 131.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 2 )
text = "story
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="multiplayer_button" type="TextureButton" parent="VBoxContainer"]
margin_top = 370.0
margin_right = 244.0
margin_bottom = 540.0
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/multiplayer_button"]
margin_top = 67.0
margin_right = 278.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 3 )
text = "multiplayer"
__meta__ = {
"_edit_use_anchors_": false
}
